--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     --font-family: 'Poppins', sans-serif;
     /* Nunca utilizar font-size fixos tipo 16px, e sim usar REM que seria Root EM, que pega o tamanho da fonte do navegador (para mais acessibilidade)*/
@@ -16,4 +22,8 @@
     --stroke-default: #D6D3D1;
     --stroke-highlight: #F3541C;
     --semantic-error: #DC2626;
+}
+
+body {
+    overflow: hidden;
 }
