--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -29,6 +29,7 @@ input[type="date"]:focus-within {
     /* Focus-within significa que ele vai buscar no input do tipo date e ver quem ta em foco e aplicar esses estilos */
     outline: .25rem solid var(--surface-secondary);
     border: .125rem solid var(--stroke-highlight);
+    transition: .2s linear;
 
     outline-offset: .1px;
     /* Agora no safari aparece a borda */
@@ -36,6 +37,8 @@ input[type="date"]:focus-within {
 }
 
 input[type="date"] {
+
+    position: relative;
 
     &::-webkit-calendar-picker-indicator {
         opacity: 0;
@@ -61,4 +64,20 @@ input[type="date"] {
 
 select {
     background: url("../../assets/icons/arrow-down-01.svg") no-repeat calc(100% - 1rem);
+}
+
+.address .flex {
+    gap: 1.25rem;    
+}
+
+.input-wrapper:has([disabled]) {
+    opacity: .5;
+}
+
+input {
+    &[disabled] {
+        background-color: var(--surface-disabled);
+        border: 1px solid var(--stroke-default);
+        color: var(--text-primary);
+    }
 }
