--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -1,108 +1,3 @@
+@import url(input.css);
 @import url(droparea.css);
-
-
-/* Fields = Campos */
-input,
-textarea,
-select {
-    appearance: none;
-    /* Tira a setinha */
-    width: 100%;
-    border-radius: .5rem;
-    border: 1px solid var(--stroke-default);
-    padding: .75rem 1rem;
-    font: var(--text);
-}
-
-label {
-    font: var(--text-sm);
-    color: var(--text-secondary);
-    display: block;
-    /* Inline block nao aceita margim */
-    margin-bottom: .25rem;
-}
-
-input:focus,
-select:focus,
-textarea:focus,
-input[type="date"]:focus-within {
-    /* Focus-within significa que ele vai buscar no input do tipo date e ver quem ta em foco e aplicar esses estilos */
-    outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-highlight);
-    transition: .2s linear;
-
-    outline-offset: .1px;
-    /* Agora no safari aparece a borda */
-    /* Como se fosse um hackzinho para safari */
-}
-
-input[type="date"] {
-
-    position: relative;
-
-    &::-webkit-calendar-picker-indicator {
-        opacity: 0;
-    }
-
-    &::before {
-        content: "";
-        /* Todo before tem que ter um content */
-
-        position: absolute;
-        background: url("../../assets/icons/calendar-03.svg") center/contain;
-        right: 1rem;
-        width: 1.25rem;
-        height: 1.25rem;
-        top: 50%;
-        transform: translateY(-50%);
-        /* Tamanho do icone relativo a ele (metade) */
-
-    }
-
-
-}
-
-select {
-    background: url("../../assets/icons/arrow-down-01.svg") no-repeat calc(100% - 1rem);
-}
-
-.address .flex {
-    gap: 1.25rem;    
-}
-
-.input-wrapper:has([disabled]) {
-    opacity: .5;
-}
-
-input {
-    &[disabled] {
-        background-color: var(--surface-disabled);
-        border: 1px solid var(--stroke-default);
-        color: var(--text-primary);
-    }
-
-    &:invalid {
-        border: 0.125rem solid var(--semantic-error);
-    }
-
-    & + small {
-        /* Input com o small como irmao */
-        font: var(--text-sm);
-        color: #78716C;
-        display: inline-block;
-        margin-top: .25rem;
-    }
-
-    &[required] + .error {
-        display: flex;
-        align-items: center;
-        gap: .25rem;
-        font: var(--text-sm);
-        color: var(--semantic-error);
-        margin-top: .25rem;
-    }
-
-    &:not(:focus):valid + .error {
-        display: none;
-    }
-}
+@import url(radio.css);
