--- a/styles/forms.css
+++ b/styles/forms.css
@@ -18,3 +18,9 @@ legend {
 fieldset + fieldset {
     margin-top: 3rem;
 }
+
+.actions-wrapper {
+    display: flex;
+    margin-top: 3rem;
+    gap: 1rem;
+}
